--- a/package.json
+++ b/package.json
@@ -3,17 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^5.45.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
     "md5": "^2.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "typescript": "^5.4.5",
     "web-vitals": "^2.1.4"
   },
+
+  "devDependencies": {
+      "@babel/plugin-proposal-private-property-in-object": "^1.0.0"
+  },  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
